--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "js full stack internship first assignment",
   "main": "index.js",
   "scripts": {
-    "clean": "npx rimraf node_modules",
-    "dev": "npx tailwindcss build src/css/app.css -o public/app.css",
-    "start": "npm run dev && npx vite serve public"
+    "clean": "npx rimraf node_modules public/css",
+    "dev": "npx tailwindcss build src/css/app.css -o public/css/app.css"
   },
   "keywords": [
     "html",
@@ -22,7 +21,6 @@
   },
   "devDependencies": {
     "postcss-cli": "^8.3.1",
-    "rimraf": "^3.0.2",
-    "vite": "^2.1.2"
+    "rimraf": "^3.0.2"
   }
 }
